# custom-mistral-actions

./: requirements.txt  setup.cfg
my-action/: naruto.py
myaction/: naruto.py
