[metadata]
name = myaction
summary = Test Custom Mistral Action
description-file =
    README
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Vitalik
author-email = vitalii.solodilov@netcracker.com

[files]
packages =
    myaction

[entry_points]
mistral.actions =
    naruto = myaction.naruto:NarutoSay